--- a/index.html
+++ b/index.html
@@ -53,41 +53,6 @@
       background-color: #d32f2f;
     }
 
-    .input-container {
-      display: flex;
-      margin-bottom: 10px;
-    }
-
-    .input-field {
-      flex: 1;
-      padding: 10px;
-      border: 2px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-      outline: none;
-      transition: border-color 0.3s ease;
-    }
-
-    .input-field:focus {
-      border-color: #2196F3;
-    }
-
-    .submit-button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #2196F3;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-left: 10px;
-      transition: background-color 0.3s ease;
-    }
-
-    .submit-button:hover {
-      background-color: #0F8BDD;
-    }
-
     .container {
       text-align: center;
     }
@@ -97,8 +62,31 @@
     }
   </style>
   <script>
-    // Retrieve count from localStorage if available
-    let count = parseFloat(localStorage.getItem('count')) || 0;
+    // Function to set a cookie
+    function setCookie(name, value, days) {
+      var expires = "";
+      if (days) {
+        var date = new Date();
+        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+        expires = "; expires=" + date.toUTCString();
+      }
+      document.cookie = name + "=" + (value || "") + expires + "; path=/";
+    }
+
+    // Function to get a cookie value by name
+    function getCookie(name) {
+      var nameEQ = name + "=";
+      var ca = document.cookie.split(';');
+      for (var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+      }
+      return null;
+    }
+
+    // Retrieve count from cookie if available
+    let count = parseFloat(getCookie('count')) || 0;
 
     // Function to increment count with a specific value
     function incrementCount(value) {
@@ -116,9 +104,9 @@
       }
     }
 
-    // Function to save count to localStorage
+    // Function to save count to cookie
     function saveCount() {
-      localStorage.setItem('count', count);
+      setCookie('count', count, 365);
     }
 
     // Function to update count display
@@ -139,20 +127,30 @@
           incrementCount(value);
         });
       });
-
-      // Add event listener to reset button
-      const resetButton = document.querySelector('.reset-button');
-      resetButton.addEventListener('click', resetCount);
     }
 
-    function addCustomAmount() {
-      const inputField = document.getElementById('customAmount');
-      const amount = parseFloat(inputField.value);
-      if (!isNaN(amount)) {
-        incrementCount(amount);
-        inputField.value = '';
+    // Keydown event listener for keybinds
+    document.addEventListener('keydown', function(event) {
+      switch (event.key) {
+        case '1':
+          incrementCount(2.50);
+          break;
+        case '2':
+          incrementCount(1.25);
+          break;
+        case '3':
+          incrementCount(2);
+          break;
+        case '4':
+          incrementCount(1);
+          break;
+        case '0':
+          resetCount();
+          break;
+        default:
+          break;
       }
-    }
+    });
   </script>
 </head>
 <body>
@@ -161,12 +159,8 @@
     <p class="count">Count: <span id="count">$0.00</span></p>
     <button class="button" data-value="2.50">Increment by $2.50</button>
     <button class="button" data-value="1.25">Increment by $1.25</button>
-    <button class="button" data-value="1">Increment by $1</button>
     <button class="button" data-value="2">Increment by $2</button>
-    <div class="input-container">
-      <input type="number" step="0.01" class="input-field" id="customAmount" placeholder="Enter amount">
-      <button class="button submit-button" onclick="addCustomAmount()">Add</button>
-    </div>
+    <button class="button" data-value="1">Increment by $1</button>
     <button class="button reset-button" onclick="resetCount()">Reset</button>
   </div>
 </body>
